GNOME Bugzilla – Bug 733055
winks: debug message printf format warnings
Last modified: 2014-11-25 16:33:13 UTC
Created attachment 280498 [details] [review] proposed patch During build I have some errors about casting pointer/integer and format arguments for values.
Comment on attachment 280498 [details] [review] proposed patch The MotionCells change is not needed anymore. For the others, please use %p as format instead of using GPOINTER_TO_INT().
Created attachment 291359 [details] [review] winks: fix debug message format issues Does this work better?
Comment on attachment 291359 [details] [review] winks: fix debug message format issues Pushed this, since it makes a lot more sense than the current code. We'll let the build bots speak.